--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,10 @@ script:
   - if [[ $EXAMPLES == true ]]; then
       python setup.py build develop;
       grep -l smoke_test examples/**/*.ipynb | xargs grep -L 'smoke_test = False' | CI=true xargs pytest --nbval-lax --current-env;
-    else
+    elif [[ $PYTORCH_VERSION = "master" ]]; then
       python -m unittest discover;
+    else
+      python -W error -m unittest discover;
     fi
 
 matrix:
